--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "z"]
 	path = z
 	url = https://github.com/rupa/z.git
+[submodule "tmux-plugin-manager"]
+	path = tmux-plugin-manager
+	url = https://github.com/tmux-plugins/tpm
