--- a/tmux.conf
+++ b/tmux.conf
@@ -2,5 +2,16 @@
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
+
 # Sane scolling
 set -g terminal-overrides 'screen*:smcup@:rmcup@'
+
+set -g @continuum-restore 'on'
+
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
