--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ set -g terminal-overrides 'screen*:smcup@:rmcup@'
 set -g @continuum-restore 'on'
 
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
